--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
     <div class="d-flex">
 
         <nav class="d-flex flex-column bg-dark text-white p-3" style="width: 250px; min-height: 100vh; position: sticky; top: 0;">
-            <h3 class="text-center">Admin Panel</h3>
+            <h3 class="text-center">Panel</h3>
             <hr class="text-white">
             <ul class="nav flex-column">
                 <li class="nav-item mb-2">
@@ -60,6 +60,11 @@
                         <i class="fas fa-comment-dots me-2"></i>Feedbacks
                     </a>
                 </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link text-white" href="/politicas_restricciones">
+                        <i class="fas fa-gavel me-2"></i>Políticas y Restricciones
+                    </a>
+                </li>                
                 <li class="nav-item mb-2">
                     <a class="nav-link text-white" href="/auth/logout">
                         <i class="fas fa-sign-out-alt me-2"></i>Logout
